fix emoji extra 22 guia 4

--- a/1-guia/ejercicios-1/ej-9-1.tex
+++ b/1-guia/ejercicios-1/ej-9-1.tex
@@ -78,8 +78,6 @@ Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en
         $$
 \end{itemize}
 
-% Contribuciones
 \begin{aportes}
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{nad GarRaz \github}
 \end{aportes}
