--- a/1-guia/teoria-1/teoria-1.tex
+++ b/1-guia/teoria-1/teoria-1.tex
@@ -136,7 +136,7 @@
           A_1 \times \cdots \times A_n := \set{(x_1,\dots,x_n): x_1 \en A_1, x_2 \en A_2 \cdots, x_n \en A_n}.
         $$
 
-        Parece interesante nota que un punto $z \not\en A \times B$ no implica que esté en $A^c \times B^c$:
+        Parece interesante notar que si un punto $z \not\en (A \times B)$ \ul{no implica} que  $z \en (A^c \times B^c)$:
         $$
           (A \times B)^c \text{ no es lo mismo que } (A^c \times B^c)
         $$
