--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -167,7 +167,7 @@
           \frac{1 - ( a^{2^k})^2}{1-a} =
           \frac{1 - a^{2 \cdot 2^k}}{1-a} = \frac{1 - a^{2^{k+1}}}{1-a}\Tilde
         $$
-        Si te quedaste pedaleando en los \red{!}, pensá en \textit{diferencia de cuadrados}, \textit{propidades de potencias} y coso \faIcon{hands-wash}.\par
+        Si te quedaste pedaleando en los \red{!}, pensá en \textit{diferencia de cuadrados}, \textit{propiedades de potencias} y coso \faIcon{hands-wash}.\par
         Esto muetra que $p(k+1)$ también es verdadera.\par
         Como $p(1),\, p(k) \ytext p(k+1)$ son verdaderas por el principio de inducción $p(n)$ es verdadera $\paratodo n \en \naturales$.
 
