--- a/1-guia/ejercicios-1-extra/ej-extra-6-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-6-1.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra}
+\begin{enunciado}{\ejExtra}\fechaEjercicio{parcial 2023}
   Sea $A$ el siguiente conjunto: $A = \set{n \en \naturales :  100 \leq n \leq 1000}.$ Consideramos el conjunto
   de \textbf{todas} las funciones de $\set{1,2,3,4,5,6}$ en $A$:
   $$
