--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -287,7 +287,7 @@
 \newenvironment{aportes}[1][3]{
   \par
   \vspace{10pt}
-  \begin{minipage}{0.9\linewidth}
+  \begin{minipage}{\textwidth}
     \tt\footnotesize
     Dale las gracias y un poco de amor \rosa{\faIcon{heart}} a los que contribuyeron!
     Gracias por tu aporte:
