--- a/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
@@ -1,7 +1,12 @@
 \begin{enunciado}{\ejExtra}
   Sea $a\en \enteros$ tal que $\congruencia{32a}{17}{9}$. Calcular $(a^3 + 4a + 1 : a^2 + 2)$
-
 \end{enunciado}
+\parrafoDestacado[\atencion]{
+    En este ejercicio \ul{no están pidiendo que des el MCD para cada valor de $a$}.
+    Solo hay que contestar cual sería el mayor MCD entre todos los
+    $a$ permitidos.
+}
+
 Simplifico un poco:
 $$
   \congruencia{32a}{17}{9}
