fix ej 9 guia 2

--- a/2-guia/ejercicios-2-extra/ej-extra-9-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-9-2.tex
@@ -53,22 +53,16 @@ $$
   \frac{10\blue{h} + 5}{2(h+1)} \cdot \blue{h}\cdot 3^{\blue{h}-1}
   >
   (\blue{h+1}) \cdot 3^{\blue{h}}
+  \Sii{\red{!}}
+  10h^2 + 5h > 6(h+1)^2
   \sisolosi
-  10h^2 + 5h \mayor{\red{!}} 6(h+1)^2
+  4h^2 - 7h -6 > 0
 $$
-Esa última desigualdad es verdadera $ \paratodo h\en \naturales_{>2}$.
-  {\small
-    \parrafoDestacado[\atencion]{
-      Dependiendo del grado de paranoia que uno tenga se va a poner a probar eso
-      de todas las formas existentes, con análisis de función límites, derivadas, transformada de Fourier y análisis complejo.
-      Pero, yo no iría mucho más lejos que decir que el coeficiente principal de uno es más grande que el otro y son las dos crecientes y listo.
-      Dicho eso es verdad que el criterio final será del corrector, asi, que andá a preguntale a alguien y listo.
-    }
-  }
+Esa última desigualdad es verdadera $ \paratodo h\en \naturales_{>2}$. Se puede probar a mano que $p(n = 2)$ es veradera.
 
-Se puede probar a mano que $p(n = 2)$ es veradera.
+\bigskip
 
-Dado que $p(1), p(2), p(h) \ytext p(h+1)$ resultaron ser verdaderas, por el principio de inducción también lo es $p(n)$ para todo $n \en \naturales$ como se
+Dado que $p(1),~ p(2),~ p(h) \ytext p(h+1)$ resultaron ser verdaderas, por el principio de inducción también lo es $p(n)$ para todo $n \en \naturales$ como se
 quería mostrar.
 
 \begin{aportes}
