add extra23 guia 4

--- a/2-guia/ejercicios-2-extra/ej-extra-3-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-3-2.tex
@@ -47,9 +47,10 @@ $$
 \parrafoDestacado{
   \textit{Nota innecesaria pero que quizás aporta: }
 
-  Lo que acabamos de hacer recién nos deja la HI regalada.
-  Pero atento que esto \underline{solo} suele funcionar cuando \underline{no}  tenemos a la '$n$'
-  en el término principal de la sumatoria. Después de hacerte éste, mirá el \refEjExtra{ejExtra:2}
+  Lo que acabamos de hacer recién nos deja la \purple{HI} regalada.
+  Pero atento que esto \underline{suele} funcionar cuando \underline{no} tenemos a la $n$
+  en el término principal de la sumatoria. Después de hacerte éste, mirá el \refEjExtra{ejExtra:2} y ya que estás
+  también mirá el \refEjExtra{ejExtra:7} donde si bien hay una $n$ conviene encararlo distinto al \refEjExtra{ejExtra:2}.
 
   \textit{Fin nota innecesaria pero que quizás aporta}.
 }
