--- a/2-guia/ejercicios-2-extra/ej-extra-7-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-7-2.tex
@@ -8,7 +8,7 @@ Ejercicio de inducción \text{\small \rosa{\faIcon[regular]{meh-rolling-eyes}}}.
 
 Queremos probar nuestras proposición $p(n)$:
 $$
-  p(n) : \sumatoria{i=1}{n}(n-i)2^{i-1} = 2^n - n -1 \quad \paratodo k \en \naturales
+  p(n) : \sumatoria{i=1}{n}(n-i)2^{i-1} = 2^n - n -1 \quad \paratodo n \en \naturales
 $$
 
 \textit{Caso base  ¿$p(1)$ es verdadera?:}
