comment extra 13 guia 2

--- a/2-guia/ejercicios-2-extra/ej-extra-13-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-13-2.tex
@@ -54,6 +54,10 @@ $$
     \frac{2^{\blue{h + 1}}}{h + \red{2}}                                              \\
   \end{array}
 $$
+\parrafoDestacado{
+  ¿Hace falta demostrar que $(h+2)! \geq 2^h \paratodo h \en \naturales$? No sé. Para mí no es necesario
+  pero el corrector tiene la última palabra. Yo solo voy a decir que el factorial crece más rápido. Fin.
+}
 Por lo tanto $p(\blue{h+1})$ también resultó verdadera.
 
 \bigskip
