add extra 24 guia 4

--- a/2-guia/ejercicios-2-extra/ej-extra-13-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-13-2.tex
@@ -68,7 +68,7 @@ $$
   La razón a la que crece está sucesión:
   $$
     \frac{a_{n+1}}{a_n} =
-    \frac{(h + 3)!}{(h+2)!} = h + 3
+    \frac{(h + 3)!}{(h + 2)!} = h + 3
     \ytext
     \frac{b_{n+1}}{b_n} =
     \frac{2^{h+1}}{2^h} = 2
@@ -99,3 +99,7 @@ Por lo tanto $p(\blue{h+1})$ también resultó verdadera.
 
 Dado que $p(1),\, p(\blue{h}), p(\blue{h + 1})$ resultaron verdaderas por principio de inducción
 también lo es $p(n) \paratodo n \en \naturales$.
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
