--- a/4-guia/ejercicios-4-extra/ej-extra-24-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-24-4.tex
@@ -1,4 +1,5 @@
-\begin{enunciado}{\ejExtra}
+\begin{enunciado}{\ejExtra}\fechaEjercicio{(7/10/25) primer parcial}
+
   Sean $a$ y $b \en \enteros$ tales que $(a:b) = 5^2$. Hallar los posibles valores de
   $(a^2b : 5^4(a^2 + b^2))$.
   Dar ejemplo de cada caso posible.
