--- a/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
@@ -18,9 +18,9 @@ Para que $(n^{109} + 37 : 52) = 26$ debe ocurrir que:
 $$
   \llamada1
   \llave{rcl}{
-    n^{109} + 37 \divideA 13 & \Sii{def} & \congruencia{n^{109}}{2}{13} \Sii{$13$ primo}[$13 \noDivide n$] \congruencia{n^{\blue1}}{2}{13} \\
-    n^{109} + 37 \divideA 2  & \Sii{def} & \congruencia{n^{109}}{1}{2}  \Sii{\red{!!}} \congruencia{n}{1}{2}                                     \\
-    n^{109} + 37 \noDivide 4 & \Sii{def} & \noCongruencia{n^{109}}{3}{4} \Sii{$\llamada3$}
+    13 \divideA     n^{109} + 37 & \Sii{def} & \congruencia{n^{109}}{2}{13} \Sii{$13$ primo}[$13 \noDivide n$] \congruencia{n^{\blue1}}{2}{13} \\
+    2  \divideA     n^{109} + 37 & \Sii{def} & \congruencia{n^{109}}{1}{2}  \Sii{\red{!!}} \congruencia{n}{1}{2}                                     \\
+    4 \noDivide    n^{109} + 37 & \Sii{def} & \noCongruencia{n^{109}}{3}{4} \Sii{$\llamada3$}
     \llave{l}{
       \congruencia{n^{109}}{0}{4}                                            \\
       \otext                                                                                        \\
@@ -111,4 +111,5 @@ $$
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/veraroux}{Vera R. \github}
+  \item \aporte{https://github.com/fransureda}{Francisco Sureda \github}
 \end{aportes}
